k8s/Abdoman-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: abdoman-deployment
  namespace: deepmd-ml
spec:
  selector:
    matchLabels:
      app: abdoman
  replicas: 1
  template:
    metadata:
      labels:
        app: abdoman
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /home/ubuntu/storage1/deepmd/abdoman/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /home/ubuntu/storage1/deepmd/abdoman/output
          type: DirectoryOrCreate

      containers:
      - name: abdoman
      
        image: anilyerramasu/segabdominalorgan_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /abdoman
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: abdoman-service
  namespace: deepmd-ml
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: abdoman
