k8s/Colon-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: colon-deployment
  namespace: deepmd-ml
spec:
  selector:
    matchLabels:
      app: colon
  replicas: 1
  template:
    metadata:
      labels:
        app: colon
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /home/ubuntu/storage1/deepmd/lung/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /home/ubuntu/storage1/deepmd/lung/output
          type: DirectoryOrCreate

      containers:
      - name: colon
      
        image: anilyerramasu/segcolon_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        

---
apiVersion: v1
kind: Service
metadata:
  name: colon-service
  namespace: deepmd-ml
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: colon
