k8s/LiTS-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: lits-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: lits
  replicas: 1
  template:
    metadata:
      labels:
        app: lits
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /tmp/deepmd/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /tmp/deepmd/lits/output
          type: DirectoryOrCreate

      containers:
      - name: lits
      
        image: anilyerramasu/segliver_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: lits-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: lits
