k8s/Pancreas-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: pancreas-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: pancreas
  replicas: 1
  template:
    metadata:
      labels:
        app: pancreas
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /tmp/deepmd/pancreas/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /tmp/deepmd/pancreas/output
          type: DirectoryOrCreate

      containers:
      - name: pancreas
      
        image: anilyerramasu/segpancreas_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /pancreas
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: pancreas-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: pancreas
