k8s/Spleen.deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: spleen-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: spleen
  replicas: 1
  template:
    metadata:
      labels:
        app: spleen
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /tmp/deepmd/spleen/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /tmp/deepmd/spleen/output
          type: DirectoryOrCreate

      containers:
      - name: spleen
      
        image: anilyerramasu/segspleen_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /spleen
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: spleen-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: spleen
