k8s/Thoractic-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: thor-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: thor
  replicas: 1
  template:
    metadata:
      labels:
        app: thor
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /home/ubuntu/storage1/deepmd/thor/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /home/ubuntu/storage1/deepmd/thor/output
          type: DirectoryOrCreate

      containers:
      - name: thor
      
        image: anilyerramasu/segthor_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /thoractic
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: thor-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: thor
