k8s/deepmd-deployment.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: seghepatic-deployment
  namespace: deepmd
spec:
  selector:
    matchLabels:
      app: hepatic
  replicas: 1
  template:
    metadata:
      labels:
        app: hepatic
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /tmp/deepmd/input
          type: DirectoryOrCreate
      - name: deepmd-storage-output
        hostPath:
          path: /tmp/deepmd/hepatic/output
          type: DirectoryOrCreate

      containers:
      - name: hepatic
      
        image: anilyerramasu/seghepaticvessel_3d_gpu
        
        ports:
          - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
          - name: deepmd-storage-input
            mountPath: /home/input
          - name: deepmd-storage-output
            mountPath: /home/output
        readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: hepatic-service
  namespace: deepmd
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: hepatic
