k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-default
  namespace: deepmd
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: public
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 800m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60000"
    
    
spec:

  rules:
  - http:
      paths:
      - path: /thoractic
        pathType: Prefix
        backend:
          service:
            name: thor-service
            port:
              number: 5000
      - path: /lung
        pathType: Prefix
        backend:
          service:
            name: lung-service
            port:
              number: 5000
      - path: /abdoman
        pathType: Prefix
        backend:
          service:
            name: abdoman-service
            port:
              number: 5000
      - path: /lits
        pathType: Prefix
        backend:
          service:
            name: lits-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hepatic-service
            port:
              number: 5000
